# BeaconFlow

./: .gitignore  BeaconFlow_Optimization_Roadmap.md  BeaconFlow_improvement_plan.md  BeaconFlow_next_tasks_for_agent.md  BeaconFlow_优化方案.md  BeaconFlow_开发纲领与功能路线图.md  README.md  beaconflow_api_dev_guide.md  pyproject.toml  大纲完成进度.md
.github/workflows/: ci.yml
beaconflow/: __init__.py  __main__.py  address_range.py  benchmark.py  cli.py  doctor.py  dynamorio_custom.py  export_annotations.py  fuzz_corpus.py  importers.py  models.py  schemas.py  templates.py  triage.py  update_checker.py  wasm_parser.py  workspace.py
beaconflow/analysis/: __init__.py  ai_digest.py  auto_explore.py  block_context.py  coverage_mapper.py  decision_points.py  decompile_function.py  feedback_explore.py  flow.py  input_impact.py  input_taint.py  normalized_ir.py  (+6 more)
docs/: API_DEV_GUIDE.md  CODEX_TASKS.md  EXPERIMENTAL.md  REPORT_SCHEMA.md  ROADMAP.md  agent_playbook.md  case_workspace_guide.md  cli_cheatsheet.md  function_reference.md  human_quickstart.md  importer_guide.md  real_test_triage_auto.md  runtime_tracing_guide.md  template_guide.md  test_results.md  triage_guide.md
ghidra_scripts/: ExportBeaconFlowMetadata.java  ExportBeaconFlowMetadata.py  export_ghidra_metadata.py
ida_scripts/: export_ida_metadata.py
qemu_explore/: qemu_explore_metadata.json
test_target/: correct_flow.md  explore_mutate_report.md  flagchecker.c  flagchecker_metadata.json  qemu_explore_report.md  trace_metadata.json  wrong_vs_correct.md
tests/: smoke_beaconflow.py  test_core.py  test_triage_basic.py
(+36 files in other folders)
